crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_expr_match_4.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "value"
                },
                "span": {
                  "start": 7,
                  "end": 13
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Match": {
                    "subject": {
                      "kind": {
                        "Variable": "char"
                      },
                      "span": {
                        "start": 23,
                        "end": 28
                      }
                    },
                    "arms": [
                      {
                        "conditions": [
                          {
                            "kind": {
                              "Int": 1
                            },
                            "span": {
                              "start": 36,
                              "end": 37
                            }
                          }
                        ],
                        "body": {
                          "kind": {
                            "String": "1"
                          },
                          "span": {
                            "start": 41,
                            "end": 44
                          }
                        },
                        "span": {
                          "start": 36,
                          "end": 44
                        }
                      },
                      {
                        "conditions": null,
                        "body": {
                          "kind": {
                            "String": "default"
                          },
                          "span": {
                            "start": 61,
                            "end": 70
                          }
                        },
                        "span": {
                          "start": 50,
                          "end": 70
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 16,
                  "end": 72
                }
              }
            }
          },
          "span": {
            "start": 7,
            "end": 72
          }
        }
      },
      "span": {
        "start": 7,
        "end": 73
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 73
  }
}
