crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_expr_match_5.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "value"
                },
                "span": {
                  "start": 7,
                  "end": 13
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Match": {
                    "subject": {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 23,
                        "end": 24
                      }
                    },
                    "arms": [
                      {
                        "conditions": [
                          {
                            "kind": {
                              "Int": 0
                            },
                            "span": {
                              "start": 32,
                              "end": 33
                            }
                          },
                          {
                            "kind": {
                              "Int": 1
                            },
                            "span": {
                              "start": 35,
                              "end": 36
                            }
                          }
                        ],
                        "body": {
                          "kind": {
                            "String": "Foo"
                          },
                          "span": {
                            "start": 41,
                            "end": 46
                          }
                        },
                        "span": {
                          "start": 32,
                          "end": 46
                        }
                      },
                      {
                        "conditions": null,
                        "body": {
                          "kind": {
                            "String": "Bar"
                          },
                          "span": {
                            "start": 64,
                            "end": 69
                          }
                        },
                        "span": {
                          "start": 52,
                          "end": 69
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 16,
                  "end": 72
                }
              }
            }
          },
          "span": {
            "start": 7,
            "end": 72
          }
        }
      },
      "span": {
        "start": 7,
        "end": 73
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 73
  }
}
